# biblioteca.nvim

./: .gitignore  .luacheckrc  CONTRIBUTING.md  Cargo.toml  README.md  devenv.nix  install.sh  justfile
.github/workflows/: cicd.yml
doc/notes/: citation_item_format.md  cli.md  who_does_what.md
lua/biblioteca/: init.lua
lua/biblioteca/core/: _log.lua  _util.lua  config.lua  init.lua  rust.lua
lua/biblioteca/integrations/luasnip/: init.lua
lua/biblioteca/pickers/: fzf_lua.lua  init.lua
lua/biblioteca/utils/: init.lua
src/: lib.rs  lua.rs  main.rs
