[package]
name = "biblioteca"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
bench = false

[dependencies]
anyhow = "1.0.95"
biblatex = { version = "0.10.0", features = ["serde"] }
cacache = "13.1.0"
clap = { version = "4.5.23", features = ["derive"] }
clap-verbosity-flag = "3.0.2"
env_logger = "0.11.6"
hayagriva = { version = "0.8.0", features = ["archive"] }
log = "0.4.22"
mlua = { version = "0.10.2", features = ["luajit", "module", "macros", "serialize", "anyhow"] }
serde = "1.0.217"
serde_json = "1.0.134"
thiserror = "2.0.11"

[patch.crates-io]
hayagriva = { git = "https://github.com/chenlijun99/hayagriva" }

[target.x86_64-apple-darwin]
rustflags = ["-C", "link-arg=-undefined", "-C", "link-arg=dynamic_lookup"]

[target.aarch64-apple-darwin]
rustflags = ["-C", "link-arg=-undefined", "-C", "link-arg=dynamic_lookup"]
